# personal-finance-manager

./: CMakeLists.txt  README.md
include/core/: Category.h  Expense.h  ExpenseManager.h
include/ui/: MainWindow.h
src/: main.cpp
src/core/: ExpenseManager.cpp
src/ui/: MainWindow.cpp
